feat(webhook): refactor & introduce API key & basic auth